--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
     box-sizing:border-box;
     margin:0;
     padding:0;
+    font-family: 'Quicksand', sans-serif;
 }
+
 a{
     text-decoration: none;
     color: inherit;
@@ -15,6 +17,7 @@ a{
     align-items: center;
     background-color: rgb(150, 236, 208);
     margin-bottom: 20px;
+    border-bottom: 5px solid rgb(248, 228, 115);
 }
 .nav ul{
     list-style-type: none;
@@ -30,6 +33,8 @@ button{
     border-width: 4px;
     padding: 10px;
     border-color: aquamarine;
+    background-color: bisque;
+    font-weight: bolder;
 }
 
 .main{
@@ -51,4 +56,41 @@ button{
     height: 100%;
     width: 70%;
     object-fit: cover;
+}
+/*other page*/
+.wrapper{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 30px;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    overflow: hidden;
+    max-width: 300px;
+    box-shadow:0 8px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10%;
+
+
+}
+.card img{
+    width:100%;
+    height: auto;
+    display: block;
+    border-bottom: 2px solid black;
+}
+.card.text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 5px;
+    border: none;
+
+}
+.card.text p{
+    padding: 5px;
 }
